# avai

./: .gitignore  .gitmodules  .gitpod.yml  README.md  install_ros.sh
scripts/: initial_build.sh  install_ros.sh  install_tools.sh
src/campkg/: LICENSE  README.md  package.xml  setup.cfg  setup.py
src/campkg/campkg/: camera.py  display.py  processing.py  simcam.py
src/campkg/launch/: camera_test.launch.py  camera_test_launch.py  display_raw.launch.py  display_raw_launch.py
src/controls/: package.xml  setup.py
src/controls/controls/: controller.py  heartbeat.py
src/controls/launch/: autonomous_driving.launch.py  turtlebot3_burger.launch.py  turtlebot3_burger_fast.launch.py
src/lidar_filter/: package.xml  setup.cfg  setup.py
src/lidar_filter/lidar_filter/: lidar_filter.py  waypoint_filter.py
src/perception/: LICENSE  README.md  package.xml  setup.cfg  setup.py
src/perception/launch/: detection_display_launch.py  detector_display.launch.py  detector_display_launch.py
src/perception/perception/: README.md  detector.py  display.py
src/sensor_fusion/: package.xml  setup.py
src/sensor_fusion/config/: slam_config.yml
src/sensor_fusion/sensor_fusion/: sensor_fusion.py  ws_hannes.py
src/simulation/: CMakeLists.txt  README.md  package.xml
src/simulation/launch/: track.launch  track_1.launch.py
src/simulation/world/: track.world
src/turtlebot3_gazebo/launch/: track_1.launch.py
src/waypoint_calculator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/waypoint_calculator/waypoint_calculator/: waypoint_calculator.py
