<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>campkg</name>
  <version>0.0.0</version>
  <description>A minimal image publisher and subscriber node that uses OpenCV</description>
  <maintainer email="esat.bayhan@rub.de">Esat Sefa Bayhan</maintainer>
  <license>ToDo</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend> <!--ROS2 Image message type-->
  <depend>cv_bridge</depend> <!--converting OpenCV to ROS2 images and vice versa-->
  <depend>python3-opencv</depend> <!--accessing webcam-->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>